# ds_library_template

./: .gitignore  Makefile  Readme.md  Readme_pypi.md  main.py  pyproject.toml  setup.cfg  setup.py
dataset/: tiny_shakespeare.txt
language_model/: __init__.py
language_model/model/: __init__.py  layers.py  losses.py  metrics.py
language_model/tokenizer/: __init__.py  data_supplier.py  tokenizer.py
trained_tokenizer_vocab/: vocab.txt
