[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ds_template"
version = "0.0.0"
description = "Ctrl+c, Ctrl_v ready ds template"
authors = ["insalakhiev <INSalakhiev@sberbank.ru>"]

[tool.poetry.dependencies]
python = ">=3.6.2,<3.10"

[tool.poetry.dev-dependencies]
tox = "^3.24.4"
mypy = "^0.910"
wemake-python-styleguide = "^0.15.3"
pylint = "^2.11.1"
black = "^21.9b0"
