[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ds_template"
version = "0.0.0"
description = "Ctrl+c, Ctrl_v ready ds template"
authors = ["insalakhiev <INSalakhiev@sberbank.ru>"]

[tool.poetry.dependencies]
python = ">=3.9,<=3.11"
pathlib = "^1.0.1"
datasets = "^2.13.1"

[tool.poetry.dev-dependencies]
tox = "^3.24.4"
mypy = "^0.910"
wemake-python-styleguide = "^0.15.3"
pylint = "^2.11.1"
black = "^21.9b0"

[tool.mypy]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
ignore = "WPS412, D100, D104, E501"
