[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ds_template"
version = "0.0.0"
description = "Ctrl+c, Ctrl_v ready ds template"
authors = ["insalakhiev <INSalakhiev@sberbank.ru>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
torch = "^2.7.0"
torchvision = "^0.22.0"
torchaudio = "^2.7.0"

[tool.poetry.group.dev.dependencies]
tox = "*"
mypy = "*"
pylint = "*"
black = "*"
pytest = "*"
